more ui improvements, fixed log in text spacing

--- a/public/css/home screen styles/header.css
+++ b/public/css/home screen styles/header.css
@@ -1,6 +1,3 @@
-
-
-
 .nameSection{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -17,7 +14,7 @@
     min-width: 450px;
     padding: 20px;
 
-    font-size: 65px;
+    font-size: 75px;
     font-family: Arimo;
     font-weight: 500;
     color: rgb(100, 100, 100);
