--- a/public/css/home screen styles/home screen.css
+++ b/public/css/home screen styles/home screen.css
@@ -61,7 +61,7 @@
     display: flex;
 
     color: rgb(100, 100, 100);
-    font-size: 40px;
+    font-size: 30px;
     font-family: Arimo;
     font-weight: 400;
     background-color: rgb(205, 221, 238);
